--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "tsgcoder",
   "version": "0.0.0",
-  "private": true,
   "scripts": {
     "build:dev": "./node_modules/.bin/react-scripts build",
     "server:dev": "node app.js",
@@ -9,40 +8,41 @@
   },
   "dependencies": {
     "app-root-path": "^2.2.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "bootstrap-social": "^5.1.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.5",
     "debug": "^2.6.9",
     "dockerode": "^2.5.8",
+    "dompurify": "^2.2.2",
     "dotenv": "^6.2.0",
-    "env-cmd": "^10.0.1",
+    "env-cmd": "^10.1.0",
     "express": "~4.16.0",
     "express-react-views": "^0.11.0",
-    "express-session": "^1.15.6",
+    "express-session": "^1.17.1",
     "html": "^1.0.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.15",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "markdown": "^0.5.0",
     "marked": "^0.7.0",
     "memory-streams": "^0.1.3",
     "method-override": "^3.0.0",
-    "morgan": "^1.9.1",
-    "mysql": "^2.16.0",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "mysql2": "^1.6.4",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^7.1.0",
-    "redux": "^4.0.1",
-    "sequelize": "^5.15.0",
+    "redux": "^4.0.5",
+    "sequelize": "^5.22.3",
     "sequelize-cli": "^5.5.0",
     "serve-favicon": "^2.5.0"
   },
